--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -4,6 +4,12 @@
   border: 10px solid #1b97f6fe;
   padding: 20px;
 }
+.archive {
+  width: 960px;
+  margin: 0 auto;
+  border: 10px solid #5d13d5fe;
+  padding: 20px;
+}
 .main {
   width: 960px;
   margin: 0 auto;
